# GigaCoderAssist

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-11-gigacoder-config-assistant.md
scripts/: sync-release-version.mjs
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/config/: backup.rs  claude.rs  codex.rs  mod.rs  model_catalog_template.json  paths.rs
src-tauri/src/gigacoder/: client.rs  mod.rs  types.rs
test/: sync-release-version.test.mjs
