[package]
name = "gigacoder-config-assistant"
version = "0.1.2"
description = "GigaCoder Codex and Claude Code configuration assistant"
authors = ["GigaCoder"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["formatting", "macros"] }
toml_edit = { version = "0.23.6", features = ["serde"] }

[dev-dependencies]
tempfile = "3.22.0"
